--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "2.0.76",
     "gatsby-image": "2.0.20",
     "gatsby-plugin-emotion": "4.0.1",
+    "gatsby-plugin-google-analytics": "^2.0.16",
     "gatsby-plugin-manifest": "2.0.9",
     "gatsby-plugin-offline": "2.0.16",
     "gatsby-plugin-react-helmet": "3.0.2",
