--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "gatsby-image": "2.0.20",
     "gatsby-plugin-google-analytics": "^2.0.16",
     "gatsby-plugin-manifest": "2.0.9",
-    "gatsby-plugin-offline": "2.0.16",
     "gatsby-plugin-react-helmet": "3.0.2",
-    "gatsby-plugin-sharp": "2.0.14",
+    "gatsby-plugin-sharp": "^2.0.28",
     "gatsby-source-filesystem": "^2.0.25",
     "gatsby-transformer-remark": "^2.3.3",
     "gatsby-transformer-sharp": "2.1.8",
     "prop-types": "15.6.2",
-    "react": "16.6.3",
-    "react-dom": "16.6.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "5.2.0",
     "react-ionicons": "^3.0.1"
   },
