styling blog content

--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "gatsby-plugin-manifest": "2.0.9",
     "gatsby-plugin-react-helmet": "3.0.2",
     "gatsby-plugin-sharp": "^2.0.28",
+    "gatsby-remark-autolink-headers": "^2.0.16",
+    "gatsby-remark-copy-linked-files": "^2.0.11",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^3.0.10",
+    "gatsby-remark-prismjs": "^3.2.6",
+    "gatsby-remark-smartypants": "^2.0.9",
     "gatsby-source-filesystem": "^2.0.25",
     "gatsby-transformer-remark": "^2.3.3",
     "gatsby-transformer-sharp": "2.1.8",
+    "prismjs": "^1.15.0",
     "prop-types": "15.6.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
