--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "10.0.9",
     "gatsby": "2.0.76",
     "gatsby-image": "2.0.20",
+    "gatsby-plugin-emotion": "4.0.6",
     "gatsby-plugin-google-analytics": "^2.0.16",
     "gatsby-plugin-manifest": "2.0.9",
     "gatsby-plugin-react-helmet": "3.0.2",
