--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@emotion/core": "10.0.9",
-    "gatsby": "2.0.76",
+    "gatsby": "^2.15.36",
     "gatsby-image": "2.0.20",
     "gatsby-plugin-emotion": "4.0.6",
     "gatsby-plugin-google-analytics": "^2.0.16",
-    "gatsby-plugin-manifest": "2.0.9",
+    "gatsby-plugin-manifest": "^2.2.21",
     "gatsby-plugin-react-helmet": "3.0.2",
-    "gatsby-plugin-sharp": "^2.0.28",
+    "gatsby-plugin-sharp": "^2.2.29",
     "gatsby-remark-autolink-headers": "^2.0.16",
     "gatsby-remark-copy-linked-files": "^2.0.11",
     "gatsby-remark-external-links": "^0.0.4",
@@ -21,7 +21,7 @@
     "gatsby-remark-smartypants": "^2.0.9",
     "gatsby-source-filesystem": "^2.0.25",
     "gatsby-transformer-remark": "^2.3.3",
-    "gatsby-transformer-sharp": "2.1.8",
+    "gatsby-transformer-sharp": "^2.2.21",
     "prismjs": "^1.15.0",
     "prop-types": "15.6.2",
     "react": "^16.8.4",
