--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "adibfirman-blog",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@emotion/core": "10.0.9",
-    "gatsby": "^2.15.36",
+    "gatsby": "^2.20.18",
     "gatsby-image": "2.0.20",
     "gatsby-plugin-emotion": "4.0.6",
     "gatsby-plugin-google-analytics": "^2.0.16",
     "gatsby-plugin-manifest": "^2.2.21",
+    "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-react-helmet": "3.0.2",
     "gatsby-plugin-sharp": "^2.2.29",
     "gatsby-remark-autolink-headers": "^2.0.16",
