--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "gatsby": "^2.20.18",
-    "gatsby-image": "2.0.20",
+    "gatsby-image": "^2.4.0",
     "gatsby-plugin-emotion": "^4.2.1",
     "gatsby-plugin-google-analytics": "^2.0.16",
     "gatsby-plugin-manifest": "^2.2.21",
