--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Write tests!! -> https://gatsby.app/unit-testing\"",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "deploy": "gatsby build && gh-pages -d public -b master",
+    "start": "yarn develop"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
