adding new blog

--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Write tests!! -> https://gatsby.app/unit-testing\"",
     "deploy": "gatsby build && gh-pages -d public -b master",
-    "start": "yarn develop"
+    "clean": "rm -rf .cache public",
+    "start": "yarn clean && yarn dev"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
