--- a/package.json
+++ b/package.json
@@ -1,60 +1,34 @@
 {
-  "name": "adibfirman-blog",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "gatsby": "^2.20.18",
-    "gatsby-image": "^2.4.0",
-    "gatsby-plugin-emotion": "^4.2.1",
-    "gatsby-plugin-google-analytics": "^2.0.16",
-    "gatsby-plugin-manifest": "^2.2.21",
-    "gatsby-plugin-module-resolver": "^1.0.3",
-    "gatsby-plugin-react-helmet": "3.0.2",
-    "gatsby-plugin-sharp": "^2.2.29",
-    "gatsby-remark-autolink-headers": "^2.0.16",
-    "gatsby-remark-copy-linked-files": "^2.0.11",
-    "gatsby-remark-external-links": "^0.0.4",
-    "gatsby-remark-images": "^3.0.10",
-    "gatsby-remark-prismjs": "^3.2.6",
-    "gatsby-remark-smartypants": "^2.0.9",
-    "gatsby-source-filesystem": "^2.0.25",
-    "gatsby-transformer-remark": "^2.3.3",
-    "gatsby-transformer-sharp": "^2.2.21",
-    "prismjs": "^1.15.0",
-    "prop-types": "15.6.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-helmet": "5.2.0",
-    "react-ionicons": "^3.0.1"
-  },
-  "keywords": [
-    "gatsby"
-  ],
+  "name": "kitakumpul",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/adibfirman/kitakumpul.git",
+  "author": "adibfirman <dib.firman@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "dev": "gatsby develop",
-    "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Write tests!! -> https://gatsby.app/unit-testing\"",
-    "deploy": "gatsby build && gh-pages -d public -b master",
-    "clean": "rm -rf .cache public",
-    "start": "yarn clean && yarn dev"
+    "dev": "next",
+    "start": "next start",
+    "build": "next build"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0",
-    "gh-pages": "2.0.1",
-    "prettier": "1.15.2"
+    "@types/node": "^14.14.2",
+    "@types/react": "^16.9.53",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "eslint": "^7.12.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  "dependencies": {
+    "next": "^9.5.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
