chore finished home page

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"next": "^10.0.0",
 		"next-seo": "^4.14.0",
 		"react": "^17.0.1",
-		"react-dom": "^17.0.1"
+		"react-dom": "^17.0.1",
+		"react-feather": "^2.0.8"
 	}
 }
