--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.6",
+		"@types/puppeteer": "^3.0.3",
 		"@types/react": "^16.9.55",
 		"@typescript-eslint/eslint-plugin": "^4.6.0",
 		"@typescript-eslint/parser": "^4.6.0",
 		"babel-plugin-module-resolver": "^4.0.0",
+		"chrome-aws-lambda": "^5.3.1",
 		"eslint": "^7.12.1",
 		"eslint-config-prettier": "^6.15.0",
 		"eslint-loader": "^4.0.2",
@@ -24,6 +26,7 @@
 		"eslint-plugin-react": "^7.21.5",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"prettier": "^2.1.2",
+		"puppeteer": "^5.4.1",
 		"typescript": "^4.0.5"
 	},
 	"dependencies": {
