--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"emotion-server": "^10.0.27",
 		"emotion-theming": "^10.0.27",
 		"next": "^10.0.0",
+		"next-absolute-url": "^1.2.2",
 		"next-on-netlify": "^2.6.0",
 		"next-seo": "^4.14.0",
 		"react": "^17.0.1",
