--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "next",
+		"dev:watch": "next-remote-watch ./blog-contents",
 		"start": "next start",
 		"build": "next build",
 		"postbuild": "next-on-netlify"
@@ -33,15 +34,21 @@
 		"@chakra-ui/core": "^0.8.0",
 		"@emotion/core": "^10.0.35",
 		"@emotion/styled": "^10.0.27",
+		"date-fns": "^2.16.1",
 		"emotion": "^10.0.27",
 		"emotion-server": "^10.0.27",
 		"emotion-theming": "^10.0.27",
+		"gray-matter": "^4.0.2",
+		"htmr": "^0.9.2",
 		"next": "^10.0.0",
 		"next-absolute-url": "^1.2.2",
 		"next-on-netlify": "^2.6.0",
+		"next-remote-watch": "^0.2.0",
 		"next-seo": "^4.14.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
-		"react-feather": "^2.0.8"
+		"react-feather": "^2.0.8",
+		"remark": "^13.0.0",
+		"remark-html": "^13.0.1"
 	}
 }
