--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 		"paths": {
 			"@components": ["./components"],
 			"@utils": ["./utils"],
+			"@utils/*": ["./utils/*"],
 			"@/*": ["./*"]
 		}
 	},
