move next seo to centralize on page component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 		"downlevelIteration": true,
 		"paths": {
 			"@components": ["./components"],
+			"@components/*": ["./components/*"],
 			"@utils": ["./utils"],
 			"@utils/*": ["./utils/*"],
 			"@/*": ["./*"]
