--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-feather": "^2.0.8",
+		"react-github-btn": "^1.2.0",
 		"remark": "^13.0.0",
 		"remark-html": "^13.0.1"
 	}
