--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"next-on-netlify": "^2.6.0",
 		"next-remote-watch": "^0.2.0",
 		"next-seo": "^4.14.0",
+		"puppeteer-core": "^5.4.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-feather": "^2.0.8",
