--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"htmr": "^0.9.2",
 		"next": "^10.0.0",
 		"next-absolute-url": "^1.2.2",
-		"next-on-netlify": "^2.6.0",
+		"next-on-netlify": "netlify/next-on-netlify#incremental-static-regeneration",
 		"next-remote-watch": "^0.2.0",
 		"next-seo": "^4.14.0",
 		"puppeteer-core": "^5.4.1",
