--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		"dev": "next",
 		"dev:watch": "next-remote-watch ./blog-contents",
 		"start": "next start",
-		"build": "next build",
-		"postbuild": "next-on-netlify"
+		"build": "next build"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.6",
@@ -42,7 +41,6 @@
 		"htmr": "^0.9.2",
 		"next": "^10.0.0",
 		"next-absolute-url": "^1.2.2",
-		"next-on-netlify": "^2.6.0",
 		"next-remote-watch": "^0.2.0",
 		"next-seo": "^4.14.0",
 		"puppeteer-core": "^5.4.1",
