--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@chakra-ui/core": "^0.8.0",
 		"@emotion/core": "^10.0.35",
+		"@emotion/react": "^11.0.0",
 		"@emotion/styled": "^10.0.27",
 		"date-fns": "^2.16.1",
 		"emotion": "^10.0.27",
