--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"dependencies": {
 		"@chakra-ui/core": "^0.8.0",
+		"@chakra-ui/react": "^1.0.0",
 		"@emotion/core": "^10.0.35",
 		"@emotion/react": "^11.0.0",
 		"@emotion/styled": "^10.0.27",
@@ -38,6 +39,7 @@
 		"emotion": "^10.0.27",
 		"emotion-server": "^10.0.27",
 		"emotion-theming": "^10.0.27",
+		"framer-motion": "^2.9.4",
 		"gray-matter": "^4.0.2",
 		"htmr": "^0.9.2",
 		"next": "^10.0.0",
