--- a/.prettierrc
+++ b/.prettierrc
@@ -13,6 +13,6 @@
 	"singleQuote": false,
 	"tabWidth": 2,
 	"trailingComma": "none",
-	"useTabs": true,
+	"useTabs": false,
 	"vueIndentScriptAndStyle": false
 }
