--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
 		"emotion-theming": "^10.0.27",
 		"framer-motion": "^2.9.4",
 		"gray-matter": "^4.0.2",
-		"htmr": "^0.9.2",
 		"next": "^10.0.0",
 		"next-absolute-url": "^1.2.2",
 		"next-remote-watch": "^0.2.0",
@@ -52,6 +51,7 @@
 		"react-dom": "^17.0.1",
 		"react-feather": "^2.0.8",
 		"react-github-btn": "^1.2.0",
+		"react-markdown": "^5.0.2",
 		"remark": "^13.0.0",
 		"remark-html": "^13.0.1"
 	}
