--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@emotion/core": "^10.0.35",
 		"@emotion/react": "^11.0.0",
 		"@emotion/styled": "^10.0.27",
+		"@types/parse-numeric-range": "^0.0.1",
 		"date-fns": "^2.16.1",
 		"emotion": "^10.0.27",
 		"emotion-server": "^10.0.27",
@@ -45,6 +46,7 @@
 		"next-absolute-url": "^1.2.2",
 		"next-remote-watch": "^0.2.0",
 		"next-seo": "^4.14.0",
+		"parse-numeric-range": "^1.2.0",
 		"prism-react-renderer": "^1.1.1",
 		"puppeteer-core": "^5.4.1",
 		"react": "^17.0.1",
