get web mention count

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@emotion/styled": "^10.0.27",
 		"@mdx-js/loader": "^1.6.21",
 		"@next/mdx": "^10.0.1",
+		"@types/isomorphic-fetch": "^0.0.35",
 		"@types/parse-numeric-range": "^0.0.1",
 		"date-fns": "^2.16.1",
 		"emotion": "^10.0.27",
@@ -44,6 +45,7 @@
 		"emotion-theming": "^10.0.27",
 		"framer-motion": "^2.9.4",
 		"gray-matter": "^4.0.2",
+		"isomorphic-fetch": "^3.0.0",
 		"next": "^10.0.0",
 		"next-absolute-url": "^1.2.2",
 		"next-remote-watch": "^0.2.0",
