--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-	"name": "adibfirman-blog",
-	"private": true,
-	"version": "1.0.0",
-	"author": "adibfirman <dib.firman@gmail.com>",
-	"license": "MIT",
-	"scripts": {
-		"dev": "next",
-		"dev:watch": "next-remote-watch ./blogs",
-		"start": "next start",
-		"build": "next build"
-	},
-	"devDependencies": {
-		"@types/node": "^14.14.6",
-		"@types/puppeteer": "^3.0.3",
-		"@types/react": "^16.9.55",
-		"@typescript-eslint/eslint-plugin": "^4.6.0",
-		"@typescript-eslint/parser": "^4.6.0",
-		"babel-plugin-module-resolver": "^4.0.0",
-		"chrome-aws-lambda": "^5.3.1",
-		"eslint": "^7.12.1",
-		"eslint-config-prettier": "^6.15.0",
-		"eslint-loader": "^4.0.2",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-react": "^7.21.5",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"prettier": "^2.1.2",
-		"puppeteer": "^5.4.1",
-		"typescript": "^4.0.5"
-	},
-	"dependencies": {
-		"@chakra-ui/core": "^0.8.0",
-		"@chakra-ui/react": "^1.0.0",
-		"@emotion/core": "^10.0.35",
-		"@emotion/react": "^11.0.0",
-		"@emotion/styled": "^10.0.27",
-		"@mdx-js/loader": "^1.6.21",
-		"@next/mdx": "^10.0.1",
-		"@types/isomorphic-fetch": "^0.0.35",
-		"@types/parse-numeric-range": "^0.0.1",
-		"date-fns": "^2.16.1",
-		"emotion": "^10.0.27",
-		"emotion-server": "^10.0.27",
-		"emotion-theming": "^10.0.27",
-		"framer-motion": "^2.9.4",
-		"gray-matter": "^4.0.2",
-		"isomorphic-fetch": "^3.0.0",
-		"next": "^10.0.0",
-		"next-absolute-url": "^1.2.2",
-		"next-remote-watch": "^0.2.0",
-		"next-seo": "^4.14.0",
-		"parse-numeric-range": "^1.2.0",
-		"prism-react-renderer": "^1.1.1",
-		"puppeteer-core": "^5.4.1",
-		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-feather": "^2.0.8",
-		"react-github-btn": "^1.2.0",
-		"react-markdown": "^5.0.2",
-		"remark": "^13.0.0",
-		"remark-html": "^13.0.1"
-	}
+  "name": "adibfirman-blog",
+  "private": true,
+  "version": "1.0.0",
+  "author": "adibfirman <dib.firman@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "dev": "next",
+    "dev:watch": "next-remote-watch ./blogs",
+    "start": "next start",
+    "build": "next build"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.6",
+    "@types/puppeteer": "^3.0.3",
+    "@types/react": "^16.9.55",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "chrome-aws-lambda": "^5.3.1",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.1.2",
+    "puppeteer": "^5.4.1",
+    "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/core": "^10.0.35",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^10.0.27",
+    "@mdx-js/loader": "^1.6.21",
+    "@next/mdx": "^10.0.1",
+    "@types/isomorphic-fetch": "^0.0.35",
+    "@types/parse-numeric-range": "^0.0.1",
+    "date-fns": "^2.16.1",
+    "emotion": "^10.0.27",
+    "emotion-server": "^10.0.27",
+    "emotion-theming": "^10.0.27",
+    "framer-motion": "^2.9.4",
+    "gray-matter": "^4.0.2",
+    "isomorphic-fetch": "^3.0.0",
+    "next": "^10.0.0",
+    "next-absolute-url": "^1.2.2",
+    "next-remote-watch": "^0.2.0",
+    "next-seo": "^4.14.0",
+    "parse-numeric-range": "^1.2.0",
+    "prism-react-renderer": "git+https://github.com/adibfirman/prism-react-renderer.git",
+    "puppeteer-core": "^5.4.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-feather": "^2.0.8",
+    "react-github-btn": "^1.2.0",
+    "react-markdown": "^5.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
+  }
 }
