--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "next-remote-watch": "^0.2.0",
     "next-seo": "^4.14.0",
     "parse-numeric-range": "^1.2.0",
-    "prism-react-renderer": "git+https://github.com/adibfirman/prism-react-renderer.git",
+    "prism-react-renderer": "https://github.com/adibfirman/prism-react-renderer",
     "puppeteer-core": "^5.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
