--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.1.2",
-    "puppeteer": "^5.4.1",
     "typescript": "^4.0.5"
   },
   "dependencies": {
@@ -39,6 +38,7 @@
     "@next/mdx": "^10.0.1",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/parse-numeric-range": "^0.0.1",
+    "@types/puppeteer-core": "^5.4.0",
     "date-fns": "^2.16.1",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
@@ -52,7 +52,7 @@
     "next-seo": "^4.14.0",
     "parse-numeric-range": "^1.2.0",
     "prism-react-renderer": "^1.1.1",
-    "puppeteer-core": "^5.4.1",
+    "puppeteer-core": "^5.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
