--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-feather": "^2.0.8",
     "react-github-btn": "^1.2.0",
     "react-markdown": "^5.0.2",
+    "react-medium-image-zoom": "^4.3.1",
     "remark": "^13.0.0",
     "remark-html": "^13.0.1"
   }
