--- a/.github/workflows/generate-psi-data.yml
+++ b/.github/workflows/generate-psi-data.yml
@@ -1,9 +1,9 @@
 name: Generate PSI report
 on:
   schedule:
-    # https://crontab.guru/#30_2_*_*_1,3,5
-    # At 02:30 on Monday, Wednesday, and Friday
-    - cron: "30 2 * * 1,3,5"
+    # https://crontab.guru/#30_2_*_*_0,1,2,3,4,5
+    # At 02:30 on Sunday, Monday, Tuesday, Wednesday, Thursday, and Friday.
+    - cron: "30 2 * * 0,1,2,3,4,5"
 
 jobs:
   run_psi:
@@ -15,9 +15,11 @@ jobs:
           fetch-depth: 0
 
       - name: psi-gh-action
-        uses: mazipan/psi-gh-action@1.5.0
+        uses: mazipan/psi-gh-action@1.5.1
         with:
           api_key: ${{ secrets.PSI_API_KEY }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
           urls: |
             https://adibfirman.space/
             https://adibfirman.space/blog/
@@ -27,6 +29,4 @@ jobs:
           runs: 1
           max: 10
           override: false
-          branch: main
           push_back: true
-          token: ${{ secrets.GITHUB_TOKEN }}
