--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "chrome-aws-lambda": "^5.3.1",
     "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.1.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
