--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "chrome-aws-lambda": "^5.3.1",
     "eslint": "^7.12.1",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
