--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "framer-motion": "^4",
     "gray-matter": "^4.0.2",
     "isomorphic-fetch": "^3.0.0",
+    "markdown-toc": "^1.2.0",
     "next": "^12.0.4",
     "next-absolute-url": "^1.2.2",
     "next-remote-watch": "^0.2.0",
