--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prism-react-renderer": "^1.1.1",
     "puppeteer-core": "^5.5.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.8",
     "react-github-btn": "^1.2.0",
