--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-markdown": "^5.0.2",
     "react-medium-image-zoom": "^4.3.1",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-html": "^13.0.1",
+    "rss-parser": "^3.12.0"
   }
 }
