--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "next build"
   },
   "devDependencies": {
+    "@types/dompurify": "^2.4.0",
     "@types/node": "^14.14.6",
     "@types/puppeteer": "^3.0.3",
     "@types/react": "^16.9.55",
@@ -42,6 +43,7 @@
     "@types/parse-numeric-range": "^0.0.1",
     "@types/puppeteer-core": "^5.4.0",
     "date-fns": "^2.16.1",
+    "dompurify": "^2.4.1",
     "emotion": "^10.0.27",
     "emotion-server": "^10.0.27",
     "framer-motion": "^4",
