--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-absolute-url": "^1.2.2",
     "next-remote-watch": "^0.2.0",
     "next-seo": "^4.14.0",
+    "nextjs-cors": "^2.1.2",
     "parse-numeric-range": "^1.2.0",
     "prism-react-renderer": "^1.1.1",
     "puppeteer-core": "^5.5.0",
