init using nodejs 18

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -16,11 +20,18 @@
     "downlevelIteration": true,
     "baseUrl": "./src",
     "paths": {
-      "@*": ["./*"],
-      "~*": ["../*"]
-    }
+      "@*": [
+        "./*"
+      ],
+      "~*": [
+        "../*"
+      ]
+    },
+    "incremental": true
   },
-  "exclude": ["node_modules"],
+  "exclude": [
+    "node_modules"
+  ],
   "include": [
     "env.d.ts",
     "next-env.d.ts",
