--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "eslint:recommended",
     "plugin:react-hooks/recommended",
     "plugin:prettier/recommended",
+    "next",
     "prettier"
   ],
   "globals": {
@@ -45,7 +46,8 @@
         "@typescript-eslint/no-unused-vars": [
           "error",
           { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
-        ]
+        ],
+        "@next/next/no-page-custom-font": "off"
       }
     },
     {
