--- a/package.json
+++ b/package.json
@@ -12,9 +12,19 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.2",
+    "@astrojs/react": "^4.2.7",
+    "@lucide/astro": "^0.510.0",
     "@tailwindcss/vite": "^4.1.6",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "astro": "^5.7.12",
-    "tailwindcss": "^4.1.6"
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.510.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "4.1.6",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "prettier": "3.5.3",
