--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "gray-matter": "^4.0.3",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
