--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-markdown": "^10.1.0",
+    "react-router": "^7.7.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
