--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@plausible-analytics/tracker": "^0.4.2",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "gray-matter": "^4.0.3",
