--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@plausible-analytics/tracker": "^0.4.2",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "@resvg/resvg-js": "2.6.2",
     "gray-matter": "^4.0.3",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
@@ -22,7 +23,9 @@
     "react-router": "^7.7.1",
     "react-syntax-highlighter": "^15.6.6",
     "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "satori": "^0.18.2",
+    "satori-html": "0.3.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
