--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-syntax-highlighter": "^15.6.6",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
-    "satori": "^0.18.2",
-    "satori-html": "0.3.2"
+    "satori": "^0.18.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
