--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "jsx": "react-jsx",
     "rootDirs": [
       ".",
-      "./.react-router/types"
+      "./.react-router/types",
+      "./types/satori.d.ts"
     ],
     "baseUrl": ".",
     "paths": {
