--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@resvg/resvg-js": "2.6.2",
     "gray-matter": "^4.0.3",
     "isbot": "^5.1.27",
+    "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
