--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "@resvg/resvg-js": "2.6.2",
+    "@supabase/supabase-js": "^2.57.2",
     "gray-matter": "^4.0.3",
     "isbot": "^5.1.27",
     "phosphor-react": "^1.4.1",
@@ -34,6 +35,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "supabase": "^2.40.7",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
