--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@supabase/supabase-js": "^2.57.2",
     "gray-matter": "^4.0.3",
     "isbot": "^5.1.27",
+    "markdown-to-jsx": "^7.7.13",
     "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0",
     "react-router": "^7.7.1",
     "react-syntax-highlighter": "^15.6.6",
     "rehype-raw": "^7.0.0",
