--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@giscus/react": "^3.1.0",
     "@mdx-js/mdx": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
+    "@netlify/vite-plugin-react-router": "1.0.1",
     "@plausible-analytics/tracker": "^0.4.2",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
